--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -70,7 +70,7 @@ endif ()
 
 
 # Install
-if (NOT SKBUILD AND CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+if (NOT SKBUILD AND SPGLIB_INSTALL)
 	# Normal installation target to system. When using scikit-build check python subdirectory
 	if (WIN32)
 		# TODO: Probably wrong, please fix
