--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -51,7 +51,7 @@ if (SPGLIB_USE_SANITIZER)
 		message(WARNING "Sanitizer are not bundled well with intel compiler")
 	else ()
 		string(TOLOWER ${SPGLIB_USE_SANITIZER} SPGLIB_USE_SANITIZER)
-		target_compile_options(Spglib_symspg PUBLIC -fsanitize=${SPGLIB_USE_SANITIZER})
+		target_compile_options(Spglib_symspg PRIVATE -fsanitize=${SPGLIB_USE_SANITIZER})
 		target_link_options(Spglib_symspg PUBLIC -fsanitize=${SPGLIB_USE_SANITIZER})
 	endif ()
 endif ()
