--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ cmake.args = [
 [tool.cibuildwheel]
 skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*", "*-macosx_arm64"]
 test-extras = "test"
-test-command = "pytest {package}/python/test --benchmark-skip"
+test-command = "pytest {package}/test/functional/python"
 # Do not run test on emulated environments
 test-skip = "*-*linux_{aarch64,ppc64le,s390x} *-macosx_arm64 *-macosx_universal2:arm64"
 
@@ -90,6 +90,10 @@ repair-wheel-command = ""
 [tool.pytest.ini_options]
 addopts = "-m 'not benchmark'"
 testpaths = ["test/functional/python"]
+markers = [
+    # Define benchmark marker to avoid warnings of marker not defined
+    "benchmark: benchmarking tets",
+]
 
 [tool.coverage.run]
 command_line = '-m pytest'
