--- a/.github/workflows/pypi-wheel-builds.yml
+++ b/.github/workflows/pypi-wheel-builds.yml
@@ -7,9 +7,9 @@ concurrency:
 
 on:
   push:
-    tags: [ "*test*" ]
+    branches: [ "test-PyPi" ]
   pull_request:
-    branches: [ test-PyPi-action ]
+    branches: [ "test-PyPi" ]
   # Make it able to be used in other workflows
   workflow_call:
 
@@ -18,8 +18,9 @@ jobs:
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        os: [ ubuntu-20.04, windows-2019, macOS-11 ]
+        os: [ ubuntu-latest, windows-latest, macOS-latest ]
 
     steps:
       - uses: actions/checkout@v3
@@ -42,11 +43,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          cache: pip
       - name: Build sdist
         run: |
-          pip install numpy make cmake scikit-build-core build
-          ./python/get_nanoversion.sh
-          cat __nanoversion__.txt
+          pip install --upgrade pip build
           python -m build
       - uses: actions/upload-artifact@v3
         with:
