Move some unit tests to their proper location
Signed-off-by: Cristian Le <git@lecris.dev>

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -1,5 +1,8 @@
 list(APPEND ctest_labels unit_tests)
-set(test_sources "")
+set(test_sources
+		dataset_acess.cpp
+		error.cpp
+		)
 if (test_sources)
 	configure_spglib_tests(TARGET Spglib_tests
 			SOURCES ${test_sources}
