Move fortran functional tests
Signed-off-by: Cristian Le <git@lecris.dev>

--- a/test/functional/CMakeLists.txt
+++ b/test/functional/CMakeLists.txt
@@ -7,4 +7,6 @@ if (test_sources)
 			)
 endif ()
 add_subdirectory(c)
-add_subdirectory(fortran)
+if (SPGLIB_WITH_Fortran)
+	add_subdirectory(fortran)
+endif ()
