--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,12 +34,11 @@ test = [
     "pyyaml",
 ]
 docs = [
-    "Sphinx==4.5.0",
-    "sphinx-autobuild==2021.3.14",
-    "sphinxcontrib-bibtex==2.4.2",
-    "sphinx-book-theme==0.3.3",
-    "myst-parser==0.18.0",
-    "linkify-it-py==2.0.0"
+    "Sphinx >= 7.0",
+    "sphinxcontrib-bibtex >= 2.5",
+    "sphinx-book-theme",
+    "myst-parser >= 2.0",
+    "linkify-it-py",
 ]
 test-cov = [
     "spglib[test]",
