[Temp] Use forks to satisfy dependencies
There is a dependency hell in the testing environment. For now just see if anything fails on sphinx 7

Signed-off-by: Cristian Le <git@lecris.dev>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,8 @@ docs = [
     "Sphinx >= 7.0",
     "sphinxcontrib-bibtex >= 2.5",
     "sphinx-togglebutton",
-    "sphinx-design",
-    "sphinx-book-theme",
+    "sphinx-design @ git+https://github.com/LecrisUT/sphinx-design@sphinx-7",
+    "sphinx-book-theme @ git+https://github.com/LecrisUT/sphinx-book-theme@sphinx-7",
     "myst-parser >= 2.0",
     "linkify-it-py",
     "jinja2",
