--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -1,7 +1,7 @@
 list(APPEND ctest_labels unit_tests)
 set(test_sources
-		dataset_acess.cpp
-		error.cpp
+		test_dataset_access.cpp
+		test_error.cpp
 		)
 if (test_sources)
 	configure_spglib_tests(TARGET Spglib_tests
