[Temp][C23] Disable pedantic warnings
- There is no way to disable the specific `arrays with different qualifiers` warnings, and it otherwise produces a warning spam. This is however a bug in the pre C23 standard language and actual C compilers are not using the buggy language
- Alternatively remove all warnings in favor of `clang-tidy`

Signed-off-by: Cristian Le <git@lecris.dev>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,9 @@ configure_file(version.h.in version.h)
 if (MSVC)
 	target_compile_options(Spglib_symspg PRIVATE /W4)
 else()
-	target_compile_options(Spglib_symspg PRIVATE -Wall -Wextra -Wpedantic)
+	# TODO: C23: Disabled -Wpedantic because of warning spam
+	#  Add it back when C23 standard is widespread and revert this [Temp][C23] commit
+	target_compile_options(Spglib_symspg PRIVATE -Wall -Wextra)
 endif()
 
 # Configure main target
