--- a/.github/workflows/pypi-wheel-builds.yml
+++ b/.github/workflows/pypi-wheel-builds.yml
@@ -1,6 +1,10 @@
 name: pypi-wheel
 run-name: Spglib PyPI Wheel builds for linux
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
     tags: [ "*test*" ]
