--- a/test/functional/CMakeLists.txt
+++ b/test/functional/CMakeLists.txt
@@ -10,3 +10,12 @@ add_subdirectory(c)
 if (SPGLIB_WITH_Fortran)
 	add_subdirectory(fortran)
 endif ()
+if (SPGLIB_WITH_Python)
+	# TODO: Migrate the main tests to C library
+	add_test (NAME python-tests
+			COMMAND ${Python3_EXECUTABLE} -m pytest ${CMAKE_CURRENT_SOURCE_DIR}
+			WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+			)
+	set_tests_properties(python-tests PROPERTIES
+			LABELS "functional_tests;pytest")
+endif ()
