--- a/.packit.yaml
+++ b/.packit.yaml
@@ -35,11 +35,22 @@ jobs:
     additional_repos:
       - copr://@scikit-build/release
     targets:
-      - fedora-development
+      # TODO: Switch to fedora-all once F37 support is dropped
+      - fedora-development-x86_64
+      - fedora-latest-x86_64
+      - fedora-latest-stable-x86_64
+      - fedora-development-aarch64
+      - fedora-latest-aarch64
+      - fedora-latest-stable-aarch64
   - job: tests
     trigger: pull_request
     targets:
-      - fedora-development
+      - fedora-development-x86_64
+      - fedora-latest-x86_64
+      - fedora-latest-stable-x86_64
+      - fedora-development-aarch64
+      - fedora-latest-aarch64
+      - fedora-latest-stable-aarch64
     fmf_path: .distro
   - job: copr_build
     trigger: commit
@@ -51,8 +62,10 @@ jobs:
     targets:
       - fedora-development-x86_64
       - fedora-latest-x86_64
+      - fedora-latest-stable-x86_64
       - fedora-development-aarch64
       - fedora-latest-aarch64
+      - fedora-latest-stable-aarch64
   - job: copr_build
     trigger: release
     owner: lecris
@@ -60,20 +73,25 @@ jobs:
     targets:
       - fedora-development-x86_64
       - fedora-latest-x86_64
+      - fedora-latest-stable-x86_64
       - fedora-development-aarch64
       - fedora-latest-aarch64
+      - fedora-latest-stable-aarch64
   - job: tests
     trigger: commit
     branch: main
     targets:
-      - fedora-development
-      - fedora-latest
+      - fedora-development-x86_64
+      - fedora-latest-x86_64
+      - fedora-latest-stable-x86_64
+      - fedora-development-aarch64
+      - fedora-latest-aarch64
+      - fedora-latest-stable-aarch64
     fmf_path: .distro
   - job: propose_downstream
     trigger: release
     dist_git_branches:
-      - fedora-development
-      - fedora-latest
+      - fedora-rawhide
   - job: koji_build
     trigger: commit
     dist_git_branches:
