--- a/.github/workflows/step_build-wheel.yaml
+++ b/.github/workflows/step_build-wheel.yaml
@@ -5,13 +5,32 @@ concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: read
+
 on:
-  push:
-    branches: [ "test-PyPi" ]
-  pull_request:
-    branches: [ "test-PyPi" ]
   # Make it able to be used in other workflows
   workflow_call:
+    inputs:
+      upload:
+        required: false
+        type: boolean
+        default: true
+        description: Upload wheel as artifact
+      cibw_archs_linux:
+        required: false
+        type: string
+        default: auto aarch64
+        description: Linux architectures
+      cibw_archs_macos:
+        required: false
+        type: string
+        default: x86_64 arm64
+        description: Macos architectures
+      cibw_build:
+        required: false
+        type: string
+        description: Overwrite build targets
 
 jobs:
   build_wheels:
@@ -27,11 +46,13 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.15.0
         env:
-          CIBW_ARCHS_LINUX: auto aarch64
-          CIBW_ARCHS_MACOS: x86_64 arm64
+          CIBW_BUILD: ${{ inputs.cibw_build }}
+          CIBW_ARCHS_LINUX: ${{ inputs.cibw_archs_linux }}
+          CIBW_ARCHS_MACOS: ${{ inputs.cibw_archs_macos }}
       - uses: actions/upload-artifact@v3
         with:
           path: ./wheelhouse/*.whl
+        if: ${{ inputs.upload }}
 
   build_sdist:
     name: Build source distribution
@@ -43,3 +64,4 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           path: dist/*.tar.gz
+        if: ${{ inputs.upload }}
