--- a/cmake/spglib.pc.in
+++ b/cmake/spglib.pc.in
@@ -1,7 +1,5 @@
-prefix=@CMAKE_INSTALL_PREFIX@
-
 Name: @PROJECT_NAME@
 Description: The spglib library
 Version: @PROJECT_VERSION@
-Libs: -L${prefix}/@CMAKE_INSTALL_LIBDIR@ -lsymspg
-Cflags: -I${prefix}/include
+Libs: -L@CMAKE_INSTALL_FULL_LIBDIR@ -lsymspg
+Cflags: -I@CMAKE_INSTALL_FULL_INCLUDEDIR@
