--- a/fortran/spglib_f08.pc.in
+++ b/fortran/spglib_f08.pc.in
@@ -1,8 +1,6 @@
-prefix=@CMAKE_INSTALL_PREFIX@
-
 Name: @PROJECT_NAME@
 Description: The spglib f08 library
 depends: spglib
 Version: @PROJECT_VERSION@
-Libs: -L${prefix}/@CMAKE_INSTALL_LIBDIR@ -lspglib_f08 -lsymspg
-Cflags: -I${prefix}/@CMAKE_INSTALL_INCLUDEDIR@
+Libs: -L@CMAKE_INSTALL_FULL_LIBDIR@ -lspglib_f08 -lsymspg
+Cflags: -I@CMAKE_INSTALL_FULL_MODULEDIR@
