--- a/example/c_api/CMakeLists.txt
+++ b/example/c_api/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.6)
 project(example_spglib LANGUAGES C)
 
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_C_EXTENSIONS ON)
+
 find_package(Spglib REQUIRED)
 
 add_executable(example example.c)
