--- a/.packit.yaml
+++ b/.packit.yaml
@@ -18,6 +18,10 @@ files_to_sync:
     filters:
       - "- main.fmf.dist-git"
       - "- rpmlint.fmf"
+  - src: .distro/tests/
+    dest: tests/
+    filters:
+      - "- rpmlint.fmf"
   - src: .distro/plans/main.fmf.dist-git
     dest: plans/main.fmf
 upstream_package_name: spglib
