Add tests for niggli and delaunay reductions for default SPGLIB_NUM_ATTEMPTS=1000

--- a/test/functional/c/CMakeLists.txt
+++ b/test/functional/c/CMakeLists.txt
@@ -1,6 +1,7 @@
 list(APPEND ctest_labels c_api)
 set(test_sources
 		test_delaunay.cpp
+		test_niggli.cpp
 		test_error.cpp
 		test_symmetry.cpp
 		test_symmetry_search.cpp
