Use downstream tmt tests
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/.packit.yaml
+++ b/.packit.yaml
@@ -17,6 +17,7 @@ files_to_sync:
     dest: plans/
     filters:
       - "- main.fmf.dist-git"
+      - "- rpminspect.fmf"
       - "- rpmlint.fmf"
   - src: .distro/plans/main.fmf.dist-git
     dest: plans/main.fmf
